# goodname

./: .gitignore  Cargo.toml  LICENSE  README.md  goodname-wasm-58568c315b3cd240.js  goodname-wasm-58568c315b3cd240_bg.wasm  index-a81e70af5edc19cc.css  index.html
.github/workflows/: gh-pages.yml
goodname/: Cargo.toml  README.md
goodname-cli/: Cargo.toml
goodname-cli/src/: main.rs
goodname-wasm/: .gitignore  Cargo.toml  README.md  index.html  index.scss
goodname-wasm/src/: app.rs  cand_view.rs  main.rs  range_input.rs  text_input.rs
goodname/src/: enumerator.rs  lexicon.rs  lib.rs  trie.rs  utils.rs
nltk/: print.py
src/: enumerator.rs  main.rs  trie.rs
wordlist/: words.txt
