[package]
name = "goodname-cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "~3.2.1", features = ["derive"] }  # MIT or Apache-2.0
goodname = { path = "../goodname" }  # MIT or Apache-2.0
