[package]
name = "goodname-wasm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
goodname = { path = "../goodname" }
anyhow = "1.0"
once_cell = "1.13.0"
web-sys = { version = "0.3", features = ["Event","EventTarget","InputEvent"] }
wasm-bindgen = "0.2"
yew = "0.19"
